--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Oscar Alencar</h1>
 							<p>Desenvolvedor Web | Publicitário</p>
+							<p><a href="mailto:oscar@alencar.in">Email: oscar@alencar.in</a></p>
 							<p>- Site em construção -</p>
 						</header>
 						<!--
