--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Oscar Alencar - Desenvolvedor Web | Publicitário</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="tags" content="desenvolvedor web belém, wordpress belém, marketing digital belém">
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
