Adição  de parágrafo teste

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Oscar Alencar</h1>
+							<p>Novo parágrafo edit (sem folk)</p>
 							<p>Desenvolvedor Web | Publicitário</p>
 							<p><a href="mailto:oscar@alencar.in">Email: oscar@alencar.in</a></p>
 							<p>- Site em construção -</p>
